asm_examples/test/errors/problemImport/b.asm
module b

import a (Adom)

export Bdom

signature:
	enum domain Bdom ={BB1 | B2}

definitions: